--- a/online-web/src/main/webapp/web/html/ansAndQus.html
+++ b/online-web/src/main/webapp/web/html/ansAndQus.html
@@ -87,21 +87,21 @@
             <div class='ansAndQusRight-hot'>
 
 
-                <div class='ansAndQusRight-top-title-noDate'>
+                <!--<div class='ansAndQusRight-top-title-noDate'>
                     <img src='../images/ansandqus/my_nodata.png'/>
 
                     <p>暂无数据</p>
-                </div>
+                </div>-->
             </div>
         </div>
         <div class='ansAndQusRight-bottom2'>
             <div class='weekly'>
                 <p class='weekly-title'>周回答排行榜</p>
                 <div class='weeklyChart'>
-                    <div class='weeklyChartNoDate'>
+                    <!--<div class='weeklyChartNoDate'>
                         <img src='../images/ansandqus/my_nodata.png'/>
                         <p>暂无数据</p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
