课程增加预告，隐藏点击收起。师承--物理返回键添加。

--- a/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/information_registration.html
@@ -117,8 +117,8 @@ window.onload = function(){
 	            }  
 	        }  
 	    });  
-	    window.history.pushState('forward', null, './#forward');  
+	    window.history.pushState('/xcview/html/apprentice/information_registration.html', null, './information_registration.html');  
 	}
 };
-</script>	
+</script>		
 </html>
