--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -200,9 +200,9 @@
 			</div>     
 			
 		</div>
-		<div class="btn" style="display: none;">
+		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
 		</div>
@@ -221,9 +221,9 @@
 				<img src="../images/op_bg.png"/>	
 			</div>     
 		</div>
-		<div class="btn1" style="display: none;">
+		<!-- <div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 
 	<!--评论-->
