调整错误页

--- a/online-web/src/main/webapp/web/html/errors-pages.html
+++ b/online-web/src/main/webapp/web/html/errors-pages.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IEedge" />
-		<meta charset="UTF-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>熊猫中医云课堂 - 线上中医教育</title>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="keywords" content="中医教育,中医传承,中医线下教育,海口中医养生,国粹,传承,中医,中药,心承,熊猫中医" />
@@ -73,7 +73,7 @@
 	<div class="main">
 		<h5>哎呀，页面出错啦，程序员小哥哥们正在努力维修中…</h5>
 		<div class="wrap-img">
-			<img src="/web/images/app_anchor.png"/ alt="报错">
+			<img src="/web/images/app_anchor.png" alt="报错"/>
 		</div>
 		<div class="wrap-jump">
 			<a href="">返回首页</a>
