直播间代码还原。。够买成功后免费

--- a/wechat/src/main/webapp/xcview/html/buy_prosperity.html
+++ b/wechat/src/main/webapp/xcview/html/buy_prosperity.html
@@ -156,7 +156,7 @@
 								<span class="span0"></span>
 							</div>
 							<div class="both"></div>
-							<div class="purchase_details_money"><span></span>熊猫币</div>
+							<div class="purchase_details_money"><span class="span"></span><span class="span_fize">熊猫币</span></div>
 							<div class="prosperity_play" onclick="jump()">查看详情</div>
 						</div>
 					</div>
