--- a/online-web/src/main/webapp/web/html/404.html
+++ b/online-web/src/main/webapp/web/html/404.html
@@ -72,9 +72,9 @@
 	<body>
 		
 	<div class="main">
-		<h5>哎呀，页面出错啦，程序员小哥哥们正在努力维修中…</h5>
+		<h5>哎呀，访问资源不存在…</h5>
 		<div class="wrap-img">
-			<img src="/web/images/error-500.png"/ alt="报错">
+			<img src="/web/images/error-500.png" alt="报错"/>
 		</div>
 		<div class="wrap-jump">
 			<a href="/index.jsp" >返回首页</a>
