--- a/online-web/src/main/webapp/web/html/errors-null.html
+++ b/online-web/src/main/webapp/web/html/errors-null.html
@@ -76,8 +76,8 @@
 			<img src="/web/images/error-404.png"/ alt="报错">
 		</div>
 		<div class="wrap-jump">
-			<a href="">返回首页</a>
-			<a href="">返回上一页</a>
+			<a href="/" >返回首页</a>
+			<a href="javascript:history.back(-1)" >返回上一页</a>
 		</div>
 		
 	</div>
