--- a/online-web/src/main/webapp/web/html/ansAndQus.html
+++ b/online-web/src/main/webapp/web/html/ansAndQus.html
@@ -94,7 +94,7 @@
                 </div>-->
             </div>
         </div>
-        <div class='ansAndQusRight-bottom2'>
+        <div class='ansAndQusRight-bottom2' style="display: none;">
             <div class='weekly'>
                 <p class='weekly-title'>周回答排行榜</p>
                 <div class='weeklyChart'>
