--- a/online-web/src/main/webapp/web/html/404.html
+++ b/online-web/src/main/webapp/web/html/404.html
@@ -74,7 +74,7 @@
 	<div class="main">
 		<h5>哎呀，资源没找着…</h5>
 		<div class="wrap-img">
-			<img src="/web/images/error-404.png" alt="报错"/>
+			<img src="https://file.ipandatcm.com/18613175307/48b05c35dd02203b.png" alt="报错"/>
 		</div>
 		<div class="wrap-jump">
 			<a href="/" >返回首页</a>
