直播间--增加封面图。主播--回复评价。购买页修改收费价格展示

--- a/wechat/src/main/webapp/xcview/html/line_class.html
+++ b/wechat/src/main/webapp/xcview/html/line_class.html
@@ -13,10 +13,10 @@
 	<!--手机嵌入模板-->
 	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 	<style>
-		.web_toast{
-		    width: 3.8rem;
+		.web_toasts{
+		    width: 3.8 !important;
 		    left: 50% !important;
-		    margin-left: -2rem;
+		    margin-left: -2rem !important;
 		}
 	</style>
 </head>
@@ -91,12 +91,5 @@
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
 <script type="text/javascript" src="/xcview/js/line_class.js"></script>
-
-
-<script>
-window.onload = function(){
- 
-};
-</script>
 
 </html>
