--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -158,6 +158,24 @@ $(function(){
 		font-size: 0.68rem;
 		color: #fff;
 	}
+	.video_end_top1 .video_end{
+		width: 100%;
+	    height: 100%;
+	    background: #000;
+	    opacity: 0.5;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: -1;
+	}
+	.video_end_top1 .smallImgPath{
+		width: 100%;
+	    height: 100%;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: -1;
+	}
 	.video_end_top2 .initiation{
 		font-size: 0.68rem;
 	    color: #fff;
@@ -168,6 +186,25 @@ $(function(){
 	    padding: 0.2rem;
 	    width: 3rem;
 	    margin: 0 auto;
+	}
+
+	.video_end_top2 .smallImgPath{
+		width: 100%;
+	    height: 100%;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: -1;
+	}
+	.video_end_top2 .video_end{
+		width: 100%;
+	    height: 100%;
+	    background: #000;
+	    opacity: 0.5;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: -1;
 	}
 .mCustomScrollBox{
 	height1: 14rem;
@@ -256,6 +293,8 @@ $(function(){
 
 		<!--直播结束，正在生成回放提示-->
 		<div class="video_end_top2" style="display: none;">
+			<img src="" alt="" class="smallImgPath" />
+			<div class="video_end"></div>
 			<p>直播结束，正在生成回放…</p>
 			<div class="initiation" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div>
 		</div>
@@ -271,6 +310,7 @@ $(function(){
 		
 		<!--直播结束查看回放-->
 		<div class="video_end_top1" style="display: none;">
+			<img src="" alt="" class="smallImgPath" />
 			<div class="video_end"></div>
 			<p>直播结束,点击查看回放</p>
 			<div class="div"><img src="/xcview/images/refurbish.png" alt=""></div>
