删除pc银行卡照片，添加课程时间显示

--- a/online-web/src/main/webapp/web/html/ResidentDoctor.html
+++ b/online-web/src/main/webapp/web/html/ResidentDoctor.html
@@ -197,7 +197,7 @@
 								<span class="idCard_warn warning hide">身份证号不能为空</span>
 							</div>
 							
-							<div class="idCard_pic">
+							<!--<div class="idCard_pic">
 								<span style="vertical-align: top;"><em>*</em> 身份证</span>
 								<span class="idFont_pic" onclick="$('#idFont_pic_ipt').click()">
 									<p style="font-size: 90px;height: 100px;font-weight: 300;color: #d8d8d8;text-align: center;">+</p>
@@ -215,7 +215,7 @@
 								<input type="file" name="pic" id="idFont_pic_ipt" style="position: absolute;visibility: hidden;" accept="image/gif,image/jpeg,image/jpg,image/png"/>
 								<input type="file" name="pic" id="idBack_pic_ipt" style="position: absolute;visibility: hidden;" accept="image/gif,image/jpeg,image/jpg,image/png"/>
 								<span class="warning hide" style="margin-left:110px">请上传身份证图片</span>
-							</div>
+							</div>-->
 							
 							<div class="teacher_picUpdata">
 								<span style="vertical-align: top;"><em>*</em>  医师资格证</span>
@@ -461,7 +461,7 @@
 			<span class="doc_Idnum">{{cardNum}}</span>
 		</div>
 		
-		<div class="idCard_pic">
+		<!--<div class="idCard_pic">
 			<span style="vertical-align: top;"><em>*</em> 身份证</span>
 			<span class="idFont_pic" style="cursor: default;">
 				<img src={{cardPositive}} alt="">
@@ -469,7 +469,7 @@
 			<span class="idBack_pic" style="cursor: default;">
 				<img src={{cardNegative}} alt="" />
 			</span>
-		</div>
+		</div>-->
 		
 		<div class="teacher_picUpdata">
 			<span style="vertical-align: top;"><em>*</em>  医师资格证</span>
