--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -209,8 +209,14 @@
 														<div class="detail">
 															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
-																<span class="teacher">{{item.lecturerName}}</span>
-																<span class="y"></span>
+																<span class="teacher z">{{item.lecturerName}}</span>
+																{{if item.type == 3}}
+																	{{if item.startDateStr.indexOf('.')==-1}}
+																	<span class="y"><img src="/web/images/myvideo-time.png" style="margin: -3px 3px 0 0;" />{{item.startDateStr}}</span>                        
+																	{{else}}
+																 	<span class="y"><img src="/web/images/date_month.png" style="margin: -3px 2px 0 0;" />{{item.startDateStr.replace(".", "月")}}日</span>
+																	{{/if}}
+																{{/if}}
 																
 															</p>
 															<p class="info clearfix">
@@ -267,7 +273,7 @@
 														{{else}}
 														<a style="cursor:pointer" href="/courses/{{item.id}}/info" target="_blank">														
 														{{/if}}
-													{{/if}}	
+													{{/if}}
 														<div class="img">
 															<img src="{{item.smallImgPath}}">
 														</div>
@@ -296,16 +302,17 @@
 														<div class="detail">
 															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
-																<span class="teacher">{{item.name}}</span>
+																<span class="teacher z">{{item.name}}</span>
 																{{if item.type==4}}
 																<span class="y">{{item.city}}</span>															
 																{{/if}}
 																
-																{{if.item.type == 3}}
-																	{{else if item.startDateStr.indexOf('.')==-1}}
-																	<span class="y"><img src="/web/images/myvideo-time.png" style="margin: -3px 3px 0 0;" />{{item.item.startDateStr}}</span>                        
-																	{{else if item.startDateStr.indexOf(':')==-1}}
-																 	<span class="y"><img src="/web/images/date_month.png" style="margin: -3px 2px 0 0;" />{{item.item.startDateStr}}</span>
+																{{if item.type == 3}}
+																	{{if item.startDateStr.indexOf('.')==-1}}
+																	<span class="y"><img src="/web/images/myvideo-time.png" style="margin: -3px 3px 0 0;" />{{item.startDateStr}}</span>                        
+																	{{else}}
+																 	<span class="y"><img src="/web/images/date_month.png" style="margin: -3px 2px 0 0;" />{{item.startDateStr.replace(".", "月")}}日</span>
+																	{{/if}}
 																{{/if}}
 															</p>
 															<p class="info clearfix">
@@ -393,15 +400,16 @@
 														<div class="detail">
 															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
-																<span class="teacher">{{item.name}}</span>
+																<span class="teacher z">{{item.name}}</span>
 																{{if item.type==4}}
 																<span class="y">{{item.city}}</span>
 																{{/if}}
-																{{if.item.type == 3}}
-																	{{else if item.startDateStr.indexOf('.')==-1}}
-																	<span class="y"><img src="/web/images/myvideo-time.png" style="margin: -3px 3px 0 0;" />{{item.item.startDateStr}}</span>                        
-																	{{else if item.startDateStr.indexOf(':')==-1}}
-																 	<span class="y"><img src="/web/images/date_month.png" style="margin: -3px 2px 0 0;" />{{item.item.startDateStr}}</span>
+																{{if item.type == 3}}
+																	{{if item.startDateStr.indexOf('.')==-1}}
+																	<span class="y"><img src="/web/images/myvideo-time.png" style="margin: -3px 3px 0 0;" />{{item.startDateStr}}</span>                        
+																	{{else}}
+																 	<span class="y"><img src="/web/images/date_month.png" style="margin: -3px 2px 0 0;" />{{item.startDateStr.replace(".", "月")}}日</span>
+																	{{/if}}
 																{{/if}}
 															</p>
 															<p class="info clearfix">
@@ -968,10 +976,6 @@
 												<li>
 													<p>500熊猫币</p>
 													<p>¥ <span>50</span></p>
-												</li>
-												<li>
-													<p>1熊猫币</p>
-													<p>¥ <span>0.1</span></p>
 												</li>
 												<li>
 													<p>1000熊猫币</p>
