去除1熊猫币充值入口

--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -435,9 +435,9 @@
 						<p>充值数量</p>
 						<div class='item_content content_two'>
 							<ul>
-								<li data-value='0.1' class="dian">0.1个 <i
-									class="ico i-selector"></i>
-								</li>
+								<!--<li data-value='0.1' class="dian">0.1个 <i-->
+									<!--class="ico i-selector"></i>-->
+								<!--</li>-->
 								<li data-value='5' class='orange dian'>50个 <i
 									class="ico i-selector show"></i>
 								</li>
