移除身份证照片

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -790,7 +790,7 @@
 			<span class="doc_Idnum">{{cardNum}}</span>
 		</div>
 
-		<div class="idCard_pic">
+		<!--<div class="idCard_pic">
 			<span> 身份证</span>
 			<span class="idFont_pic" style="cursor: default;">
 				<img src={{cardPositive}} alt="" />
@@ -798,7 +798,7 @@
 			<span class="idBack_pic" style="cursor: default;">
 				<img src={{cardNegative}} alt="" />
 			</span>
-		</div>
+		</div>-->
 
 		<div class="teacher_picUpdata">
 			<span> 医师资格证</span>
