--- a/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/liveVideoAlbum.html
@@ -37,8 +37,8 @@
 				<span class="liveName"><a href="#" id="return"><img alt=""
 					src="/web/images/video2/fanhui.png"> 返回课程详情</a>&nbsp;&nbsp;<span
 				id="liveStatus"></span><span id="courseName"></span></span>
-				<div style="display: inline-block;float: right;padding: 0 30px;">
-					<a style=" color: #fff;background: #000;" href="javascript:;" class="showAlbum_list">选集</a>
+				<div style="display: inline-block;float: right;padding: 0 30px;background: #272727;">
+					<a style=" color: #fff;" href="javascript:;" class="showAlbum_list"><img src="/web/images/xuanji.png"/><span style="float: right; margin: 1px 0 0 5px;">选集</span></a>
 				</div>
 				<div class="share" style="margin-right: 0;">
 					<ul>
