--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -1158,8 +1158,8 @@
 										</ul>
 									</div>
 									<!--暂无消息-->
-									<div class="no-order-box all-news-order hide">
-										<div class="no-order-img">
+									<div class="no-order-box all-news-order hide" style="padding-top: 128px;">
+										<div class="no-order-img" style="width: 153px; height: 117px;">
 											<img src="../../images/news_null.png"/>
 										</div>
 										<p>暂无消息</p>
