--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -669,7 +669,7 @@ $(function(){
 	
 </body>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
-<script type="text/JavaScript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
