--- a/wechat/src/main/webapp/xcview/html/personal_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/personal_fragment.html
@@ -42,7 +42,7 @@
 	</div>
 </div>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
-<script type="text/JavaScript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+<script type="text/JavaScript" src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1234"></script>
 <script type="text/javascript" src="/xcview/js/common/template.js?v=wechat_1.1.111"></script>
