--- a/online-web/src/main/webapp/web/html/weixinPayPage.html
+++ b/online-web/src/main/webapp/web/html/weixinPayPage.html
@@ -101,7 +101,7 @@
 									if(preurl){
 										window.location.href = "http://"+window.location.hostname+preurl;
 									} else {
-										window.location.href = "/web/html/myStudyCenter.html";
+										window.location.href = "/web/html/personal-center/personal-index.html";
 									}
 								};
 								$(".tank span").html(m + "s");
