--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -27,6 +27,7 @@
 	    }
 	}	
 </script>
+
 </head>
     
 <body style="background:#F8F8F8;">
@@ -131,9 +132,10 @@
 				<img src="../images/op_bg.png"/>	
 			</div>     
 		</div>
-		<div class="btn1" style="display: none;">
+		<!-- 隐藏点击收起 -->
+		<!-- <div class="btn1" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 		<div class="line_xian" style="width: 100%; height: 1px;border-top: 1px solid #f0f0f0;">
 			
 		</div>
@@ -155,9 +157,10 @@
 			</div>     
 			
 		</div>
-		<div class="btn" style="display: none;">
+		<!-- 隐藏点击收起 -->
+		<!-- <div class="btn" style="display: none;">
 			<img src="../images/top.png"/>
-		</div>
+		</div> -->
 <!--详情结束-->
 	<!--评论-->
 	<div class="wrap_comment_title" onclick="btn_allComment()">
