--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -207,7 +207,7 @@
 														<span class="classCategory">线下课程</span>
 														{{/if}}
 														<div class="detail">
-															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
+															<p class="title" title="{{item.gradeName}}">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
 																<span class="teacher z">{{item.lecturerName}}</span>
 																{{if item.type == 3}}
@@ -300,7 +300,7 @@
 														<span class="classCategory">线下课程</span>
 														{{/if}}
 														<div class="detail">
-															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
+															<p class="title" title="{{item.gradeName}}">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
 																<span class="teacher z">{{item.name}}</span>
 																{{if item.type==4}}
@@ -398,7 +398,7 @@
 													
 														{{/if}}
 														<div class="detail">
-															<p class="title" data-text="音频测试3" title="音频测试3">{{item.gradeName}}</p>
+															<p class="title" title="{{item.gradeName}}">{{item.gradeName}}</p>
 															<p class="timeAndTeac">
 																<span class="teacher z">{{item.name}}</span>
 																{{if item.type==4}}
