--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -942,7 +942,7 @@
 													</script>
 												</table>
 												<!--暂无交易记录-->
-												<div class="no-order-box all-money-order hide">
+												<div class="no-order-box all-money-order hide" style="padding-top: 100px;">
 													<div class="no-order-img">
 														<img src="../../images/nodealHos.png"/>
 													</div>
