优化医师资料编辑，主播信息编辑（医师主播的医馆信息改为选填）

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -85,7 +85,7 @@
 					<tr>
 						<td><span><em>*</em>封面图</span></td>
 						<td class="preview-column-picter">
-							<img src=""/ alt="封面图" style="width: 260px; height: 147px;">
+							<img src="" alt="封面图" style="width: 260px; height: 147px;">
 						</td>
 					</tr>
 					<tr>
@@ -100,7 +100,7 @@
 			<div class="common-top work-preview-top">
 				<span>预览</span>
 				<a href="javascript:;" class="close_preview">
-					<img src="../images/alter-close.png"/ alt="关闭">
+					<img src="../images/alter-close.png" alt="关闭">
 				</a>
 			</div>
 			<div class="common-content">
@@ -144,7 +144,7 @@
 			<div class="common-top media-preview-top">
 				<span>预览</span>
 				<a href="javascript:;" class="close_preview">
-					<img src="../images/alter-close.png"/ alt="关闭">
+					<img src="../images/alter-close.png" alt="关闭">
 				</a>
 			</div>
 			<div class="common-content">
@@ -256,16 +256,10 @@
 
 						<div>
 							<span><em>*</em> 任职医馆</span>
-							<input type="text" placeholder="请填写您所在医馆或医院" class="zhuanlan_title hide" />
 							<div style="display: inline-block;vertical-align: sub;">
-								<!--<span id="close_hosChoose" style="position: absolute;top: 10px;right: 15px;font-weight: 700">关闭</span>-->
-								<!--<p class="hosChooseTip">请选择任职的医馆</p>-->
 								<label for="id_select"></label>
 								<select id="id_select" class="selectpicker bla bla bli" data-live-search="true"></select>
-								<!--<a href="javascript:;"><span>选择平台已有医馆</span></a>-->
-								<!--<button class="sureChoosehos">确认</button>-->
 							</div>
-							<!--<a href="javascript:;" class="chooseHospital"><span>选择平台已有医馆</span></a>-->
 							<p class="work_hos_warn warning hide">任职医馆不能为空</p>
 						</div>
 
