删除工作台中的身份证照片

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2091,7 +2091,7 @@
 						<div class="one" style="margin-top: 0;">身份证号</div>
 						<div class="two anchor_idCard"></div>
 					</div>
-					<div class="name">
+					<!--<div class="name">
 						<div class="one">身份证</div>
 						<div class="two two_img">
 							<img src="" class="anchor_idCard_a" />
@@ -2099,7 +2099,7 @@
 						<div class="three">
 							<img src=""  class="anchor_idCard_b" />
 						</div>
-					</div>
+					</div>-->
 					<div class="name">
 						<div class="one">医师资格证</div>
 						<div class="two two_img">
