搜索页--隐藏热门搜索-无数据时。。文本域添加固定行高。。ios文本域添加行高

--- a/wechat/src/main/webapp/xcview/html/person_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/person_fragment.html
@@ -37,10 +37,10 @@
 	}
 	.user_mywrite{
 		margin-top:0;
-		line-height: 0.4rem;
+		line-height: 0.42rem;
 	}
 	.user_mywrite p{
-		line-height: 0.4rem;
+		line-height: 0.42rem !important;
 	}
 	.user_mywrite div{
 		line-height: 0.4rem;
@@ -69,6 +69,7 @@
 		background: #fff;
 		text-indent: 0.4rem;
 	}
+
 </style>
 
 </head>
