我的关注列表添加主播详情

--- a/online-web/src/main/webapp/web/html/personal-center/personal-index.html
+++ b/online-web/src/main/webapp/web/html/personal-center/personal-index.html
@@ -476,9 +476,7 @@
 												<div class="doctor-details y">
 													<h5>{{item.name}}</h5>
 													<p class="doctor-text">
-														关注的主播关注的主播关注的主播关注的主播关注的主播关注的主播
-														关注的主播关注的主播关注的主播关注的主播关注的主播关注的主播
-														关注的主播关注的主播关注的主播关注的主播关注的主播关注的主播												
+														{{item.detail}}
 													</p>
 												</div>
 												</a>
