课程，主播页，我的点击头像进入页面。微信pc

--- a/wechat/src/main/webapp/xcview/html/apprentice/invitation_card.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/invitation_card.html
@@ -28,7 +28,7 @@
 
 	<!-- 中间内容开始 -->
 	<div class="fiexd"></div>
-	<div class="main" style="display: none">
+	<div class="main" style="display: none;background: #fff;">
 		<img src="" alt="邀请卡" class="main_img" />
 		<div class="main_size">长按上图保存图片</div>
 	</div>
