--- a/wechat/src/main/webapp/xcview/html/change_sex.html
+++ b/wechat/src/main/webapp/xcview/html/change_sex.html
@@ -64,7 +64,7 @@
 }
 .dl{
 			position: fixed;
-			width: 100% !important;
+			width: 7.5rem !important;
 			top: 0;
 			text-align: center;
 			z-index: 0;
