--- a/wechat/src/main/webapp/xcview/html/end_the_course.html
+++ b/wechat/src/main/webapp/xcview/html/end_the_course.html
@@ -76,6 +76,16 @@
 		.both{
 			clear: both;
 		}
+		.mui-scroll-wrapper{
+			position: absolute;
+		    z-index: 2;
+		    top: 0;
+		    bottom: 0;
+		    left: 50%;
+		    overflow: hidden;
+		    width: 7.5rem;
+		    margin-left: -3.75rem !important;
+		}
 	</style>
 </head>
 
