--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -36,6 +36,15 @@
     	display: block;
     	font-size: 0.24rem;
 	}
+	.weixin_img{
+		position: fixed;
+	    z-index: 99999999999;
+	    top: 0rem;
+	    left: 50%;
+	    width: 7.5rem;
+	    height: 100%;
+	    margin-left: -3.75rem;
+	}
 </style>
 
 </head>
