--- a/wechat/src/main/webapp/xcview/html/my_study_course.html
+++ b/wechat/src/main/webapp/xcview/html/my_study_course.html
@@ -76,6 +76,15 @@
 	.both{
 		clear: both;
 	}
+	.wrap_class{
+		width: 7.5rem;
+	    padding: 0.25rem 0 0 0.26rem;
+	    margin: 0.2rem 0;
+	    background: white;
+	    box-sizing: border-box;
+	    overflow: hidden;
+	    margin: 0 auto;
+	}
 </style>
 </head>
     
