--- a/wechat/src/main/webapp/xcview/html/recharges.html
+++ b/wechat/src/main/webapp/xcview/html/recharges.html
@@ -10,7 +10,9 @@
 <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<script src="/xcview/js/js.js"></script>
+<!-- <script src="/xcview/js/js.js"></script> -->
+<!--手机嵌入模板-->
+	<script type="text/javascript" src="/xcview/js/common/layout.js"></script>
 <link rel="stylesheet" type="text/css" href="/xcview/css/recharges.css" />
 <script>
 	// 判断横屏展示时的状态
@@ -41,7 +43,7 @@
 	<!--中间内容开始-->
 	<div class="recharges">
 		<div class="recharges_limit">
-			<div class="recharges_limit_title">选择充值的额度<span style="color: #b3b3b3;">&nbsp;(1元=10熊猫币)</span></div>
+			<div class="recharges_limit_title">选择充值的额度<span style="color: #b3b3b3;font-size:0.28rem;">&nbsp;(1元=10熊猫币)</span></div>
 			<div class="recharges_limit_list">
 				<ul id="ul">
 					<!-- <li class="li" id="one_li_bg">
