--- a/wechat/src/main/webapp/xcview/html/mailbox.html
+++ b/wechat/src/main/webapp/xcview/html/mailbox.html
@@ -61,7 +61,7 @@ body{
 	
 	.dl{
 			position: fixed;
-			width: 100% !important;
+			width: 7.5rem !important;
 			top: 0;
 			text-align: center;
 			z-index: 0;
