--- a/wechat/src/main/webapp/xcview/html/nickname.html
+++ b/wechat/src/main/webapp/xcview/html/nickname.html
@@ -348,7 +348,7 @@ pre:after {
 		}
 		.dl{
 			position: fixed;
-			width: 100% !important;
+			width: 7.5rem !important;
 			top: 0;
 			text-align: center;
 			z-index: 0;
