--- a/wechat/src/main/webapp/xcview/html/occupation_info.html
+++ b/wechat/src/main/webapp/xcview/html/occupation_info.html
@@ -161,7 +161,7 @@ pre:after {
 	
 .dl{
 			position: fixed;
-			width: 100% !important;
+			width: 7.5rem !important;
 			top: 0;
 			text-align: center;
 			z-index: 0;
