我的课程--结束的课程--头部。

--- a/wechat/src/main/webapp/xcview/html/my_study_course.html
+++ b/wechat/src/main/webapp/xcview/html/my_study_course.html
@@ -85,6 +85,11 @@
 	    overflow: hidden;
 	    margin: 0 auto;
 	}
+
+	.wrap_class{
+		padding-top: 0 !important;
+    	margin-top: 0.4rem;
+	}
 </style>
 </head>
     
