--- a/wechat/src/main/webapp/xcview/html/end_the_course.html
+++ b/wechat/src/main/webapp/xcview/html/end_the_course.html
@@ -48,9 +48,11 @@
 		/*处理刷新效果*/
 		.mui-scroll-wrapper{
 			top: 0.7rem;
+			padding-top: 1rem;
 		}
 		.mui-pull-top-pocket{
 			top: 0;
+			padding-top: 1rem;
 		}
 		.mui-scroll-wrapper{
 			height: 100%;
@@ -85,6 +87,9 @@
 		    overflow: hidden;
 		    width: 7.5rem;
 		    margin-left: -3.75rem !important;
+		}
+		.wrap_class{
+			margin-top: 0rem;
 		}
 	</style>
 </head>
