微信浏览器，bug修改

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -76,6 +76,9 @@ $(function(){
  .mCSB_scrollTools .mCSB_dragger{
  	opacity: 0;
  }
+ #vhall-h5-player{
+ 	height: 4.24rem !important;
+ }
 </style>
 
 <script>
@@ -231,6 +234,9 @@ $(function(){
 } 
 #video{
 	background: none;
+}
+.poson{
+	margin-left: 0 !important;
 }
 
 </style>
@@ -410,7 +416,7 @@ $(function(){
 			</div>
 			
 
-			<div class="poson">
+			<div class="poson" style="margin-left: 0 !important;">
 				<div class="send_img" id="sendChat"><!--<img src="/xcview/images/jiantou02.jpg" style="width: 1rem;margin-top: 0.2rem;" />-->发送 </div>
 	
 				<div class="div_input">
