--- a/wechat/src/main/webapp/xcview/html/live_personal.html
+++ b/wechat/src/main/webapp/xcview/html/live_personal.html
@@ -30,6 +30,10 @@
 	}
 	#ccvideo{
 		margin-top: 0.1rem;
+		height: 3.94rem;
+	}
+	.ccH5playerBox{
+		height: 3.94rem !important;
 	}
 	.add_follow p{
 	    margin-top: 0;
@@ -44,6 +48,10 @@
 	    width: 7.5rem;
 	    height: 100%;
 	    margin-left: -3.75rem;
+	}
+	.ccH5playerBox video{
+		width: 6.98rem !important;
+    	height: 3.94rem !important;
 	}
 </style>
 
