--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -71,6 +71,10 @@
 	    top: 0;
 	    z-index: 9;
 	}
+	.videos{
+		width: 7.5rem !important;
+    	height: 4.24rem !important;
+	}
 </style>
 <style type="text/css">
 	.ccH5playerBox{
@@ -568,10 +572,20 @@ $.fn.toggle = function( fn, fn2 ) {
 
 	<script>
 		window.onload = function(){
-			/*var md=document.getElementsByTagName("video")[0];
-		    md.addEventListener("ended",function(){
-		         alert("播放结束");
-		    })*/
+			//判断是否微信登陆
+			function isWeiXin() {
+			var ua = window.navigator.userAgent.toLowerCase();
+			console.log(ua);//mozilla/5.0 (iphone; cpu iphone os 9_1 like mac os x) applewebkit/601.1.46 (khtml, like gecko)version/9.0 mobile/13b143 safari/601.1
+			if (ua.match(/MicroMessenger/i) == 'micromessenger') {
+			return true;
+			} else {
+			return false;
+			}
+			}
+			if(isWeiXin()){
+				alert(123);
+				$(".ccH5playerBox video").addClass("videos");
+			}
 		};
 	</script>
 
